# wc_simd

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
aws/: ec2_control.py  emr_bootstrap.sh
data/: data_index.md  iiif_manifest_404s.csv  works.dbml  works_schema_print.txt  works_schema_spark.txt
data/imports/: data_import_index.md
docs/: ec2_gpu.md  llm_notes.md  local_hive_spark.md  ocr_notes.md  presentations.md  related_works_and_relevance.md  the_case_for_spark.md
notebooks/: agent_playground.ipynb  agent_spark_sql_toolkit.ipynb  agent_sql_database_toolkit.ipynb  catalog_scans.ipynb  describe_works.ipynb  download_iiif_manifests.ipynb  find_big_cells.py  llm.ipynb  sagemaker_endpoint.ipynb  wcdata_ner.ipynb  wellcome_dataset.ipynb  works_text.ipynb
src/wc_simd/: dataset.py  download_iiif_manifests.py  llm.py  utility.py
tests/: test_download_iiif_manifests.py  test_pyspark.py  test_sparksql_agent.py  test_utility.py
