[project]
name = "wc_simd"
version = "0.1.0"
description = ""
authors = [{ name = "@danniesim" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pyspark (>=3.5.5,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "notebook (>=7.3.3,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-aws (>=0.2.18,<0.3.0)",
    "langgraph-supervisor (>=0.0.16,<0.0.17)",
    "langsmith (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "pydbml (>=1.2.0,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "wc_simd", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
